syntax = "proto3";
option  java_package = "org.cse535.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";


service Apaxos {
  rpc prepare(PrepareRequest) returns (PrepareResponse) {}
  rpc accept(AcceptRequest) returns (AcceptResponse) {}
  rpc commit(CommitRequest) returns (CommitResponse) {}
}


service ActivateServers{
  rpc activateServer(ActivateServerRequest) returns (ActivateServerResponse) {}
  rpc deactivateServer(DeactivateServerRequest) returns (DeactivateServerResponse) {}

}

service TnxPropagate{
  rpc propagateTransaction(TransactionInputConfig) returns (TxnResponse) {}
}


service Commands{
  rpc printBalance(CommandInput) returns (CommandOutput) {}
  rpc printLog(CommandInput) returns (CommandOutput) {}
  rpc printDB(CommandInput) returns (CommandOutput) {}
  rpc Performance(CommandInput) returns (CommandOutput) {}
  rpc printClientBalance(CommandInput) returns (CommandOutput) {}
}

message TransactionInputConfig{
  int32 setNumber = 1;
  Transaction transaction = 2;
  repeated string serverNames = 5;
}




message TxnResponse{
  bool success = 1;
  string serverName = 2;
}


message PrepareRequest {
  int32 proposalNumber = 1;
  string processId = 2; // processId is Server Name

  google.protobuf.Timestamp timestamp = 3;
}

message PrepareResponse {
  int32 proposalNumber = 1;
  string processId = 2;

  repeated Transaction transactions = 4; // response T(S) from accepting server

  int32 AcceptNumProposalNumber = 5; // previous AcceptNum
  string AcceptNumProcessId = 6; // previous AcceptNum
  BlockOfTransactions AcceptVal = 7;

  bool success = 3;
}

message AcceptRequest {
  int32 proposalNumber = 1;
  string processId = 2; // processId is Server Name initiating Accept Request
  google.protobuf.Timestamp timestamp = 3;
  repeated Transaction transactionsToAccept = 4;
  map <int32, BlockOfTransactions> syncBlocks = 5; // To utilize in case of missing blocks / failure of node
  bool needsSync = 6;
}

message AcceptResponse {
  int32 proposalNumber = 1;
  string processId = 2; // request sender name
  string acceptedServerName = 3; //Current server name

  bool success = 4;
}

message CommitRequest {
  int32 proposalNumber = 1;
  string processId = 2; // processId is Server Name

  BlockOfTransactions block = 3;

  google.protobuf.Timestamp timestamp = 4;
}

message CommitResponse {
  int32 proposalNumber = 1;
  bool success = 4;

  string processId = 2; // request sender name
  string acceptedServerName = 3; //Current server name
}





message Transaction {
  string sender = 1;
  string receiver = 2;
  int32 amount = 3;
  google.protobuf.Timestamp timestamp = 4;

  string transactionHash = 5;
  int32 transactionNum = 6;
}

message BlockOfTransactions {
  repeated Transaction transactions = 1;
  int32 blockNum = 2;
  google.protobuf.Timestamp blockCommitTime = 3;

  string blockHash = 4;
  string leader = 6;
  int32 termNumber = 5; // proposal Number
}







message ActivateServerRequest{
  string serverName = 1;
}

message ActivateServerResponse{
  bool success = 1;
  string serverName = 2;
}

message DeactivateServerRequest{
  string serverName = 1;
}

message DeactivateServerResponse{
  bool success = 1;
  string serverName = 2;
}







message CommandInput{
  string input = 1;
}

message CommandOutput{
  string output = 1;
}



// Database Service

service database {
  rpc save(DataSaveRequest) returns (DataSaveResponse) {}
  rpc get(DataGetRequest) returns (DataGetResponse) {}
}

message DatabaseSnapshot{

  int32 AcceptedProposalNumber = 1;
  string AcceptedServerId = 2;
  BlockOfTransactions AcceptedBlockOfTransactions = 3;

  int32 AccountBalance = 4;

  int32 CommittedAccountBalance = 5;
  int32 CommittedProposalNumber = 6;

  map<int32, BlockOfTransactions> blocks = 7;
  map<int32, int32> balanceAfterCommit = 8;
  map<string, int32> clientBalancesAfterCommit = 9;

  int32 transactionsProcessed = 10;
  int32 transactionsCommitted = 11;
  int32 transactionsAborted = 12;

  int32 currentProposalNumber = 13;
  string currentServerId = 14;

  repeated TransactionInputConfig incomingTransactionsQueue = 15;

  repeated Transaction localTransactionLog = 16;
  repeated Transaction leaderTransactionLog = 17;

  google.protobuf.Timestamp lastPrepareAckTimestamp = 18;
  string lastPrepareAckServer = 19;

  google.protobuf.Timestamp lastAcceptAckTimestamp = 20;
  google.protobuf.Timestamp lastCommitTimestamp = 21;

  repeated int32 processedTransactionsSet = 22;
  map<int32, TimeTakenMask > timeTakenToExecuteMap = 23;


  int32 LeaderBalanceAfterTransactions = 24;

}


message TimeTakenMask{
  int64 startTime = 1;
  int64 endTime = 2;
}

message DataSaveRequest{
  string serverName = 1;
  DatabaseSnapshot snapshot = 2;
}

message DataSaveResponse{
  bool success = 1;
}

message DataGetRequest{
  string serverName = 1;
}

message DataGetResponse{
  DatabaseSnapshot snapshot = 1;
  bool success = 2;
}





